<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="application_name">Gol a Gol</string>
    <string name="main_activity_title_prefix">"GaG: "</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logs">Logs</string>

    <string name="gcm_MyServer_SenderId">243839256156</string>

    <!-- Main Menu -->
    <string name="main_menu_instanceid">Registrations</string>
    <string name="main_menu_topics">Topics</string>
    <string name="main_menu_matches">Matches</string>

    <!-- Overflow Menu -->
    <string name="show_logs">Show Logs</string>
    <string name="hide_logs">Hide Logs</string>
    <string name="clear_logs">Clear logs</string>

    <!-- Instance Id Fragment -->
    <string name="iid_register">Registrarse</string>
    <string name="iid_unregister">Borrar cuenta</string>
    <string name="iid_about_apis">▶ Información sobre el registro</string>
    <string name="iid_about_apis_open">▼ Información sobre el registro</string>
    <string name="iid_about_apis_full_text">Registration has to be done by the client in order for it to receive a registration token. The client must communicate this token back to its server. The server will then use the token to send messages to the client.</string>
    <string name="iid_token">Nombre:</string>
    <string name="user_name_hint">Nombre de usuario</string>
    <string name="iid_field_error_empty">El nombre de usuario no puede estar vacio</string>
    <string name="iid_status_exist_token">Usted esta registrado</string>
    <string name="iid_status_exist_no_token">Usted debe registrarte antes de poder usar la aplicación</string>
    <string name="iid_status_token_already_registered">Ya se realizó el registro del dispositivo con anterioridad</string>
    <string name="iid_status_token_not_yet_registered">Aun no realizó el registro del dispositivo</string>

    <!-- Topics Fragment -->
    <string name="topics_description">Suscríbete a los partidos de los que deseas recibir informacion minuto a minuto</string>
    <string name="topics_active_subscriptions">Partidos en curso:</string>
    <string name="topics_subscribe">Subscribirse</string>
    <string name="topics_unsubscribe">Borrar</string>
    <string name="topics_not_registered">Tienes que registrarte antes de empezar a recibir información de tus partidos favoritos</string>
    <string name="topics_already_subscribed">Ya te subscribiste.</string>
    <string name="topics_subscribing">Subscribing %1$s</string>
    <string name="topics_unsubscribing">Unsubscribing from %1$s</string>
    <string name="topics_no_topic_subscribed">No hay partidos disponibles</string>


    <!-- Matches Fragment -->
    <string name="matches_description">Tus partidos en directo con informacion minuto a minuto</string>
    <string name="matches_active_subscriptions">Partidos:</string>
    <string name="matches_show_log">Ver</string>
    <string name="matches_not_registered">Tienes que registrarte antes de empezar a recibir información de tus partidos favoritos</string>
    <string name="matches_already_subscribed">Ya te subscribiste.</string>
    <string name="matches_subscribing">Subscribing %1$s</string>
    <string name="matches_unsubscribing">Unsubscribing from %1$s</string>
    <string name="matches_no_topic_subscribed">No hay partidos disponibles, suscribete a un partido para recibir informacion al instante</string>

    <string name="notification_intent_received">Received notification intent: %1s</string>

</resources>
