<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/iid_token"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:hint="@string/user_name_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/iid_get_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/iid_register" />

        <Button
            android:id="@+id/iid_delete_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/iid_unregister" />
    </LinearLayout>

    <TextView
        android:id="@+id/iid_about_apis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iid_about_apis"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/iid_about_apis_full_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iid_about_apis_full_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

</LinearLayout>

